# Dummy Makefile.am to allow the help to be translated on l10n.gnome.org.
# This isn't actually processed by automake.

dist_man1_MANS = shotwell.1

@YELP_HELP_RULES@

HELP_ID = shotwell

HELP_MEDIA = \
	figures/crop_thirds.jpg \
	figures/editing_overview.png \
	figures/edit_toolbar.png \
	figures/shotwell_logo.png \
	figures/trash_process.png

HELP_FILES = \
	edit-adjustments.page \
	edit-crop.page \
	edit-enhance.page \
	edit-external.page \
	edit-nondestructive.page \
	edit-redeye.page \
	edit-rotate.page \
	edit-straighten.page \
	edit-date-time.page \
	edit-undo.page \
	formats.page \
	import-camera.page \
	import-file.page \
	import-memorycard.page \
	index.page \
	organize-event.page \
	organize-flag.page \
	organize-rating.page \
	organize-remove.page \
	organize-search.page \
	organize-tag.page \
	organize-title.page \
	other-files.page \
	other-missing.page \
	other-multiple.page \
	other-plugins.page \
	raw.page \
	running.page \
	share-background.page \
	share-export.page \
	share-print.page \
	share-send.page \
	share-slideshow.page \
	share-upload.page \
	view-displaying.page \
	view-information.page \
	view-sidebar.page

HELP_LINGUAS = cs de el es hu lv pt_BR sv

-include $(top_srcdir)/git.mk
