dist_noinst_DATA = \
	about-braunschweig.jpg \
	all-rejected.png \
	crop-pivot-reticle.png \
	crop.svg \
	faces-tool.png \
	filter-flagged-disabled.png \
	filter-flagged.png \
	filter-photos-disabled.png \
	filter-photos.png \
	filter-raw-disabled.png \
	filter-raw.png \
	filter-videos-disabled.png \
	filter-videos.png \
	five-star-filter.svg \
	five-stars.svg \
	flag-page.png \
	flag-trinket.png \
	four-star-filter-plus.svg \
	four-stars.svg \
	generic-plugin.png \
	image-adjust.svg \
	import-all.png \
	import.svg \
	make-primary.svg \
	many-faces.png \
	merge.svg \
	multiple-events.png \
	multiple-tags.png \
	no-event.png \
	noninterpretable-video.png \
	one-event.png \
	one-face.png \
	one-star-filter-plus.svg \
	one-star.svg \
	one-tag.png \
	pin-toolbar.svg \
	publish.png \
	redeye.png \
	rejected.svg \
	shotwell-16.png \
	shotwell-auto-enhance.png \
	shotwell.png \
	shotwell.svg \
	shotwell-street.jpg \
	slideshow-extension-point.png \
	sprocket.png \
	straighten.svg \
	three-star-filter-plus.svg \
	three-stars.svg \
	two-star-filter-plus.svg \
	two-stars.svg \
	videos-page.png \
	zoom-in.png \
	zoom-out.png

-include $(top_srcdir)/git.mk
