uidir = $(datadir)/shotwell/ui
dist_ui_DATA = \
	collection.ui \
	direct_context.ui \
	direct.ui \
	events_directory.ui \
	event.ui \
	fullscreen.ui \
	import_queue.ui \
	import.ui \
	media.ui \
	offline.ui \
	photo_context.ui \
	photo.ui \
	savedsearch.ui \
	search_bar.ui \
	search_sidebar_context.ui \
	shotwell.ui \
	sidebar_default_context.ui \
	tag_sidebar_context.ui \
	tags.ui \
	top.ui \
	trash.ui

dist_noinst_DATA = \
	set_background_dialog.ui \
	set_background_slideshow_dialog.ui


-include $(top_srcdir)/git.mk
