dist_noinst_DATA = \
	collection.ui \
	direct_context.ui \
	direct.ui \
	events_directory.ui \
	event.ui \
	fullscreen.ui \
	import_queue.ui \
	import.ui \
	media.ui \
	offline.ui \
	photo_context.ui \
	photo.ui \
	printing_widget.ui \
	savedsearch.ui \
	search_bar.ui \
	search_sidebar_context.ui \
	set_background_dialog.ui \
	set_background_slideshow_dialog.ui \
	shotwell.ui \
	sidebar_default_context.ui \
	tag_sidebar_context.ui \
	tags.ui \
	trash.ui

-include $(top_srcdir)/git.mk
