icondir = join_paths(get_option('datadir'), 'icons/hicolor')

install_subdir('hicolor/16x16', install_dir : icondir)
install_subdir('hicolor/22x22', install_dir : icondir)
install_subdir('hicolor/24x24', install_dir : icondir)
install_subdir('hicolor/32x32', install_dir : icondir)
install_subdir('hicolor/48x48', install_dir : icondir)
install_subdir('hicolor/256x256', install_dir : icondir)
install_subdir('hicolor/scalable/apps', install_dir: join_paths(icondir, 'scalable'))
install_subdir('hicolor/symbolic', install_dir : icondir)
